# astra_lang

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE.txt  README.md  astra_grammar.ebnf  main.rs  tokens.rs
.github/workflows/: ci.yml  rust.yml
src/: ast.rs  dataset.rs  errors.rs  lexer.rs  main.rs  parser.rs  tokens.rs  type_checker.rs  types.rs
tests/: simple.astra
