[package]
name = "astra_lang"
version = "0.1.0"
authors = ["Alex Roussinov <gd2bk1ng@proton.me>"]
edition = "2021" # < Changed from "2024"
description = "Astra language core: intent-driven, AGI-ready programming language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gd2bk1ng/astra_lang"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
