[package]
name = "astra_lang"
version = "0.1.0"
authors = ["Alex Roussinov <gd2bk1ng@proton.me>"]
edition = "2024"
description = """
Astra language core: an intent-driven, AGI-ready programming language designed to express
complex motives, intents, and adaptive behaviors for artificial general intelligence.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/gd2bk1ng/astra_lang"
readme = "README.md"
keywords = ["programming language", "AGI", "intent-driven", "domain-specific language", "adaptive"]
categories = ["programming-language", "artificial-intelligence", "domain-specific-language"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
